airflow/logs/dag_id=hands_on_test/run_id=manual__2022-06-08T06:18:40.397380+00:00/task_id=drop_order_table/attempt=4.log
[2022-06-08 06:23:05,630] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: hands_on_test.drop_order_table manual__2022-06-08T06:18:40.397380+00:00 [queued]>
[2022-06-08 06:23:05,644] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: hands_on_test.drop_order_table manual__2022-06-08T06:18:40.397380+00:00 [queued]>
[2022-06-08 06:23:05,645] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2022-06-08 06:23:05,646] {taskinstance.py:1357} INFO - Starting attempt 4 of 5
[2022-06-08 06:23:05,646] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2022-06-08 06:23:05,678] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): drop_order_table> on 2022-06-08 06:18:40.397380+00:00
[2022-06-08 06:23:05,688] {standard_task_runner.py:52} INFO - Started process 15222 to run task
[2022-06-08 06:23:05,693] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'hands_on_test', 'drop_order_table', 'manual__2022-06-08T06:18:40.397380+00:00', '--job-id', '181', '--raw', '--subdir', 'DAGS_FOLDER/dag.py', '--cfg-path', '/tmp/tmp7dw16ic5', '--error-file', '/tmp/tmp_3h958le']
[2022-06-08 06:23:05,696] {standard_task_runner.py:80} INFO - Job 181: Subtask drop_order_table
[2022-06-08 06:23:05,780] {task_command.py:369} INFO - Running <TaskInstance: hands_on_test.drop_order_table manual__2022-06-08T06:18:40.397380+00:00 [running]> on host b79bd65fcc57
[2022-06-08 06:23:05,905] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=hands_on_test
AIRFLOW_CTX_TASK_ID=drop_order_table
AIRFLOW_CTX_EXECUTION_DATE=2022-06-08T06:18:40.397380+00:00
AIRFLOW_CTX_TRY_NUMBER=4
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-08T06:18:40.397380+00:00
[2022-06-08 06:23:05,919] {base.py:68} INFO - Using connection ID 'postgres_db' for task execution.
[2022-06-08 06:23:05,933] {dbapi.py:208} INFO - Running statement: 
DROP TABLE IF EXISTS order;, parameters: None
[2022-06-08 06:23:05,936] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 188, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 212, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "order"
LINE 2: DROP TABLE IF EXISTS order;
                             ^

[2022-06-08 06:23:05,950] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=hands_on_test, task_id=drop_order_table, execution_date=20220608T061840, start_date=20220608T062305, end_date=20220608T062305
[2022-06-08 06:23:05,968] {standard_task_runner.py:97} ERROR - Failed to execute job 181 for task drop_order_table (syntax error at or near "order"
LINE 2: DROP TABLE IF EXISTS order;
                             ^
; 15222)
[2022-06-08 06:23:05,987] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-06-08 06:23:06,065] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
